# TriModalXAI

./: DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.txt  DEPLOY_RAILWAY_NOW.txt  DOCKER_DEPLOYMENT_SUMMARY.md  Dockerfile  RAILWAY_DEPLOYMENT.md  nixpacks.toml  railway.json  railway.toml  render.yaml
.github/workflows/: docker-test.yml
backend/: .dockerignore  DEPLOYMENT.md  DEPLOY_QUICK.md  Dockerfile  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README_NEW.md  RUN_LOCALLY.md  app.py  config.py  custom_layers.py  docker-build.ps1  docker-compose.yml  example_usage.py  kaggle_code_file.ipynb  knowledge_utils.py  main.py  model_utils.py  preprocessing.py  pyproject.toml  requirements.txt  run_local.ps1  start.sh  start_server.ps1  test_api.py  xai.py
